pkg/provider/kubernetes/ingress/fixtures/Double-Single-Service-Ingress_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  defaultBackend:
    service:
      name: service1
      port:
        number: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  defaultBackend:
    service:
      name: service2
      port:
        number: 80
